--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta content="Bienvenue dans le projet Babouins - Docusaurus pour la classe BTS SIO ! Ce projet a pour but de centraliser toutes nos procédures, commandes et documentations apprises en cours et de les structurer correctement. Grâce à ce dépôt, nous pourrons tous contribuer à la documentation et la valider ensemble en utilisant un système de fork avec GitHub et l'intégration continue (CI/CD)." property="og:description"/>    
     <link rel="icon" href="./build_logo.png" type="image/png" sizes="32x32">
     <link rel="stylesheet" href="./styles.css">
-    <title>Babouins - Documentation</title>
+    <title>Oh un Babouins 🙊 - Accueil</title>
 </head>
 <body>
     <div class="error-image">
@@ -17,7 +17,7 @@
         <br>
         <p>Le site est actuellement en cours de construction.</p>
         <p>Pour suivre le projet, vous pouvez consulter le GitHub de Babouins :</p>
-        <p><a href="https://github.com/DITSHOOT/docusaurus-babouins" target="_blank">Projet - Docusaurus Babouins</a></p>
+        <p><a href="https://github.com/BABOUINS-PROJECT" target="_blank">Projet - Docusaurus Babouins</a></p>
         <p>Vous pouvez également contacter nos expert Babouins en envoyant un mail  à l'adresse suivante : 
             <a href="mailto:forum@babouins.fr?subject=CONTACT%20[forum@babouins.fr]&body=Bonjour%20à%20toi,%20tu%20peux%20me%20poser%20toutes%20les%20questions%20qui%20te%20passent%20par%20la%20tête%20:)" target="_blank">forum@babouins.fr</a></p>
     </div>
